--- a/evaluation/Tutorials/fused-type-inference/states.html
+++ b/evaluation/Tutorials/fused-type-inference/states.html
@@ -62,7 +62,7 @@ transaction foo() {
 </code>
 </pre>
 
-The compiler checks method invocations to make sure they are safe:
+The compiler checks transaction invocations to make sure they are safe:
 
 <pre>
 <code>
@@ -88,7 +88,7 @@ transaction foo(LightSwitch@Unowned s) {
 </pre>
 
 <h3>Shared references</h3>
-If there is no owner of an object, then all references to the object are annotated <code>Shared</code>. These references can be used to change the state of the referenced object, but invoking methods that can only be called in some states requires a runtime check. For example:
+If there is no owner of an object, then all references to the object are annotated <code>Shared</code>. These references can be used to change the state of the referenced object, but invoking transactions that can only be called in some states requires a runtime check. For example:
 
 <pre>
 <code>
@@ -115,7 +115,7 @@ transaction test2(LightSwitch@Shared s) {
 <p>Within the scope of the <code>if...is</code> block, the compiler requires that if there <string>is</strong> an owner of the object referenced by <code>s</code>, then the owner's state specification is never violated. If it is, then the program is terminated; it is up to the programmer to make sure the body of the <code>if is</code> block does not change the state inappropriately.</p>
 
 <h3>Implicit casts</h3>
-<p>When a <code>Shared</code> reference is needed, an <code>Owned</code> suffices as long as the reference is NOT to an asset. For example, an <code>Owned</code> reference can be passed as an argument to a method that expects a <code>Shared</code> reference to a non-resource object. However, the caller is left with a <code>Shared</code> reference.</p>
+<p>When a <code>Shared</code> reference is needed, an <code>Owned</code> suffices as long as the reference is NOT to an asset. For example, an <code>Owned</code> reference can be passed as an argument to a transaction that expects a <code>Shared</code> reference to a non-resource object. However, the caller is left with a <code>Shared</code> reference.</p>
 
 <p>When an <code>Unowned</code> reference is needed, any reference suffices, and the caller is left with their original kind of reference.</p>
 </body></html>
