--- a/evaluation/Tutorials/obsidian/states.html
+++ b/evaluation/Tutorials/obsidian/states.html
@@ -8,7 +8,7 @@
 </head>
 <body class="language-obsidian">
 <script src="../prism.js"></script>
-<h2>Part 2: States</h2>
+<h2>Part 4: States</h2>
 
 <p>In our new programming language, contracts can define <em>states</em>. For example, a <code>LightSwitch</code> is always either <code>Off</code> or <code>On</code> (never both):</p>
 
@@ -21,13 +21,26 @@ contract LightSwitch {
 </code>
 </pre>
 
+<p> In addition, fields can be specified to be available only within certain states. For example: </p>
+<pre>
+<code>
+contract LightSwitch {
+    state On {
+      int brightness;
+    }
+    state Off;
+}
+</code>
+</pre>
+<p>In the example above, <code>brightness</code> can only be accessed and used when a <code>LightSwitch</code> is in the <code>On</code> state.</p>
+
 <p>Methods, including constructors, can change the state of <code>this</code> with the <code>-></code> operator:</p>
 
 <pre>
 <code>
   LightSwitch() { // constructor
     ->Off; // Transition to Off state.
-  } 
+  }
 </code>
 </pre>
 
@@ -37,13 +50,13 @@ contract LightSwitch {
 <code>
   LightSwitch@Off() { // constructor always ends with the object in Off state
     ->Off;
-  } 
+  }
 
   transaction turnOn(LightSwitch@Off >> On this) // turnOn() can only be called on objects that are in Off state.
   {
     ->On;
   }
-  
+
   transaction turnOff(LightSwitch@On >> Off this)
   {
     ->Off;
@@ -56,22 +69,26 @@ contract LightSwitch {
 <pre>
 <code>
 transaction foo() {
-    LightSwitch@Off s = new LightSwitch();
-    s.turnOn(); 
+    LightSwitch s = new LightSwitch();
+    s.turnOn();
 }
 </code>
 </pre>
 
-The compiler checks method invocations to make sure they are safe:
+The compiler checks transaction invocations to make sure they are safe:
 
 <pre>
 <code>
 transaction foo() {
-    LightSwitch@Off s = new LightSwitch();
+    LightSwitch s = new LightSwitch();
     s.turnOff(); // COMPILE ERROR: turnOff() requires that s is On, but here s is Off
 }
 </code>
 </pre>
+
+
+<h3>Optional compiler checks</h3>
+<p>As before, the programmer can use <code>[]</code> statements to check state information at compile time. For example, <code>[s@Off];</code> will cause a compiler error if <code>s</code> does not refer to an object in <code>Off</code> state.</p>
 
 <h3>Unowned references</h3>
 When there may be an owner of an object, other references cannot be used to modify the state.  These other references are annotated <code>Unowned</code>. For example:
@@ -85,7 +102,7 @@ transaction foo(LightSwitch@Unowned s) {
 </pre>
 
 <h3>Shared references</h3>
-If there is no owner of an object, then all references to the object are annotated <code>Shared</code>. These references can be used to change the state of the referenced object, but invoking methods that can only be called in some states requires a runtime check. For example:
+If there is no owner of an object, then all references to the object are annotated <code>Shared</code>. These references can be used to change the state of the referenced object, but invoking transactions that can only be called in some states requires a runtime check. For example:
 
 <pre>
 <code>
@@ -95,7 +112,7 @@ transaction test1(LightSwitch@Shared s) {
 </code>
 </pre>
 
-In the above situation, the programmer might need to check the state dynamically with <code>if...is</code>.
+In the above situation, the programmer might need to check the state dynamically with <code>if...in</code>.
 
 <h3>Testing states with <code>in</code></h3>
 <pre>
@@ -112,8 +129,7 @@ transaction test2(LightSwitch@Shared s) {
 <p>Within the scope of the <code>if...in</code> block, the compiler requires that if there <string>is</strong> an owner of the object referenced by <code>s</code>, then the owner's state specification is never violated. If it is, then the program is terminated; it is up to the programmer to make sure the body of the <code>if in</code> block does not change the state inappropriately.</p>
 
 <h3>Implicit casts</h3>
-<p>When a <code>Shared</code> reference is needed, an <code>Owned</code> suffices as long as the reference is NOT to an asset. For example, an <code>Owned</code> reference can be passed as an argument to a method that expects a <code>Shared</code> reference to a non-resource object. However, the caller is left with a <code>Shared</code> reference.</p>
+<p>When a <code>Shared</code> reference is needed, an <code>Owned</code> suffices as long as the reference is NOT to an asset. For example, an <code>Owned</code> reference can be passed as an argument to a transaction that expects a <code>Shared</code> reference to a non-resource object. However, the caller is left with a <code>Shared</code> reference.</p>
 
 <p>When an <code>Unowned</code> reference is needed, any reference suffices, and the caller is left with their original kind of reference.</p>
-
 </body></html>
