--- a/evaluation/Tutorials/obsidian/ownership2.html
+++ b/evaluation/Tutorials/obsidian/ownership2.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-    <title>Ownership: Part 2</title>
+    <title>Part 2: Ownership Continued</title>
     <meta charset="utf-8"  />
     <link rel="stylesheet" href="../stylesheet.css"/>
     <link href="../prism.css" rel="stylesheet" />
 </head>
 <body class="language-obsidian">
 <script src="../prism.js"></script>
-<h2><strong>Part 2: Ownership Continued</strong></h2>
+<h1><strong>Part 2: Ownership Continued</strong></h1>
 
 
 <h3>Ownership checks</h3>
