--- a/evaluation/Tutorials/obsidian/assets.html
+++ b/evaluation/Tutorials/obsidian/assets.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-    <title>Assets</title>
+    <title>Part 3: Assets</title>
     <meta charset="utf-8"  />
     <link rel="stylesheet" href="../stylesheet.css"/>
     <link href="../prism.css" rel="stylesheet" />
 </head>
 <body class="language-obsidian">
 <script src="../prism.js"></script>
-<h2><strong>Part 3: Assets</strong></h2>
+<h1><strong>Part 3: Assets</strong></h1>
 
 <p>Some owning references are to things that should not be accidentally lost. To prevent accidental loss, we can declare contracts 
     with the keyword <code>asset</code>. Let's do this for <code>Money</code>:</p>
