--- a/evaluation/Tutorials/obsidian/ownership2.html
+++ b/evaluation/Tutorials/obsidian/ownership2.html
@@ -1,51 +1,31 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-    <title>Part 2: Ownership Continued</title>
+    <title>Part 2: Ownership -- Variables </title>
     <meta charset="utf-8"  />
     <link rel="stylesheet" href="../stylesheet.css"/>
     <link href="../prism.css" rel="stylesheet" />
 </head>
 <body class="language-obsidian">
 <script src="../prism.js"></script>
-<h1><strong>Part 2: Ownership Continued</strong></h1>
+<h1><strong>Part 2: Ownership -- Variables</strong></h1>
 
-
-<h3>Ownership checks</h3>
-<p>Ownership can be documented and checked by writing the ownership in brackets. For example, <code>[m@Owned]</code> indicates 
-    that <code>m</code> is an owning reference at that particular point in the code. The compiler will generate an error if this 
-    might not be the case. For example:
-</p>
-
-<pre>
-<code>
-
-transaction spend(Money@Owned >> Unowned m) { // m is Owned initially but must be Unowned at the end.
-    // implementation not shown
-}
-
-transaction testSpend(Money@Owned >> Unowned  m) {
-	spend(m); [m@Unowned]; // OK
-	[m@Owned]; // COMPILE ERROR: m is Unowned here
-}
-</code>
-</pre>
-
-<p>Ownership checks in <code>[]</code> <strong>never</strong> change ownership; they only document and check what is known.</p>
-
-<h3>Assignment</h3>
+<h2>Assignment</h2>
 <p>Assignment (<code>=</code>) transfers ownership. That is, the variable on the left becomes the <strong>new</strong> owner, and the variable on the right loses ownership. For example:</p>
 
 <pre>
 <code>
-Money m = ...; [m@Owned];
-Money newMoney = m; [m@Unowned];
+Money m = ...; // m is Owned
+Money newMoney = m; // m is Unowned, and newMoney is Owned
 // Now m is of type Money@Unowned, not Money@Owned.
 </code>
 </pre>
 
-<h3>Fields</h3>
-<p><strong>Field declarations</strong>&nbsp;MUST include ownership specifications. This means that&nbsp;at the END of each transaction, the state of the object the field references MUST match the annotation on the field. For example:</p>
+<br/>
+<h2>Fields</h2>
+<p><strong>Field declarations</strong>&nbsp;MUST include ownership specifications. 
+    This means that&nbsp;at the END of each transaction, the permission (ownership status) of the object the field references MUST 
+    match the annotation on the field when it was <b>declared</b>. For example:</p>
 <pre>
 <code>
 contract Wallet {
@@ -53,16 +33,22 @@ contract Wallet {
 
 	// exchange removes (and returns) the current contents of the Wallet, replacing it with the input Money.
 	transaction exchange(Money@Owned >> Unowned otherMoney) returns Money@Owned {
-        Money temporaryMoney = money; [money@Unowned]; // OK temporarily...
-        money = otherMoney; [money@Owned]; // as long as money@Owned is restored by the end of the transaction.
+        Money temporaryMoney = money;
+        money = otherMoney;
         return temporaryMoney;
 	}
 }
 </code>
 </pre>
+NOTE: in the above example, <code>money</code> becomes <code>Unowned</code> in the <code>exchange</code> transaction when the ownership 
+is transferred to <code>temporaryMoney</code>. However, by the end of the transaction, <code>money</code> gets ownership of <code>otherMoney</code>,
+so its permission at the end of the transaction still matches its permission where it was declared (as a field).
 
-<h3>Local variables</h3>
-Local variables are declared <strong>without</strong> any ownership specified; instead, you can optionally write compiler ownership checks <code>[]</code> to specify their ownership. The compiler will output an error if the ownership does not match the check. For example:
+<br/><br/>
+<h2>Local variables</h2>
+Local variables (variables declared within transactions) are declared <strong>WITHOUT</strong> any ownership specified; 
+instead, you can optionally write compiler ownership checks <code>[]</code> to specify their ownership. 
+The compiler will output an error if the ownership does not match the check. For example:
 <pre>
 <code>
 transaction withdraw() returns Money@Owned {
@@ -76,42 +62,21 @@ transaction test() {
 </code>
 </pre>
 
-<h3>Getting rid of ownership</h3>
-<p>If ownership is no longer desired, <code>disown</code> can be used to relinquish ownership. For example:</p>
+<br/><br/>
+<h2>Constructors</h2>
+<p>Constructors are specified just like in other object-oriented languages, but can include a permission. 
+    Fields of a contract must be initialized in the constructor. For example:</p>
 <pre>
-<code>
-contract Money {
-    int amount;
-
-    transaction merge(Money@Owned >> Unowned mergeFrom) {
-        amount += mergeFrom.amount;
-        disown mergeFrom; // We absorbed the value of mergeFrom, so the owner doesn't own it anymore.
+    <code>
+    contract Wallet {
+        Money@Owned money; // Note that this annotation is on a field declaration!
+    
+        //Constructor, takes in a Money parameter
+        Wallet@Owned(Money@Owned >> Unowned initialMoney) {
+            money = initialMoney;
+        }
     }
-}
-</code>
-</pre>
-
-<h3>Invoking transactions</h3>
-<p> The compiler checks each invocation to make sure it is permitted according to the ownership of the transaction arguments. For example:</p>
-
-<pre>
-<code>
-transaction spend(Money@Owned >> Unowned m) {
-	// implementation not shown
-};
-transaction print(Money@Unowned m) {
-    // implementation not shown
-}
-
-transaction test() {
-	Money m = ... // assume m is now owned.
-	print(m); [m@Owned];
-	spend(m); [m@Unowned];
-	spend(m); // COMPILE ERROR: spend() requires Owned input, but m is Unowned here
-}
-</code>
-</pre>
-
-
+    </code>
+    </pre>
 
 </body></html>
