Removed mention of signatures from instructions.

--- a/evaluation/casino-exercises/casino_instructions.html
+++ b/evaluation/casino-exercises/casino_instructions.html
@@ -60,7 +60,7 @@
 
     <p>
     You might start by writing an outline of the contract, including any additional fields, states, and transaction declarations. Then fill in the transactions
-    to implement the program. Helper code declarations for the objects described above are given below. </p>
+    to implement the program. </p>
     
 
 
