--- a/evaluation/casino-exercises/casino_instructions.html
+++ b/evaluation/casino-exercises/casino_instructions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-    <title>Gambling</title>
+    <title>Casino</title>
     <meta charset="utf-8"  />
     <link rel="stylesheet" href="../stylesheet.css"/>
     <link href="../prism.css" rel="stylesheet" />
